<resources>
    <string name="app_name">Tenretni</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_gateways">Gateways</string>
    <string name="title_networks">Network</string>
    <string name="completed">Completed</string>
    <string name="CompagnyName" translatable="false">Tenretni - 2023®</string>
    <string name="Name" translatable="false">Ludovic Fournier - Cedrick Robichaud - Zakaria Mrad</string>
    <string name="Loading">Loading %d/10 ...</string>
    <string name="apiErrorMessage">There was an error while retrieving data from the server :(</string>
    <string name="ping" translatable="false">%d ns</string>
    <string name="signal" translatable="false">%d dBm</string>
    <string name="kernel">Kernel revision %d</string>
    <string name="ssid" translatable="false">SSID: %s</string>
    <string name="version" translatable="false">Version %s</string>
    <string name="pin" translatable="false">PIN: %s</string>
    <string name="connectionSpeed" translatable="false">%.3f Ebps</string>
    <string name="offline" translatable="false">N/A</string>
    <string name="Online" translatable="false">Online</string>
    <string name="install">Install</string>
    <string name="ticket_id">Ticket %s</string>
    <string name="title_activity_maps">Map</string>
    <string name="solve">SOLVE</string>
    <string name="open">OPEN</string>
    <string name="imgElement">R.drawable.element_%s.png</string>
    <string name="reboot">Reboot</string>
    <string name="update">Update</string>
    <string name="next_reboot_at">Next reboot at:</string>
    <string name="last_update_at">Last update at:</string>
</resources>